# Viby

./: .gitignore  README.md  biome.json  package.json  skills-lock.json
.github/workflows/: cli-release.yml
cli/: .gitignore  .npmignore  NOTICE  README.md  package.json  tsconfig.json
cli/scripts/: build-executable.ts  npmReleaseConfig.ts  prepare-npm-packages.ts  release-all.ts  sessionCapabilityBridgeSmoke.ts  sync-version.ts  versionFiles.ts
cli/src/: configuration.ts  index.ts  persistence.ts  projectPath.ts
desktop/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
desktop/scripts/: prepare-sidecar.mjs  repair-tauri-target.mjs
desktop/src/: App.tsx  main.tsx  styles-detail.css  styles-shell.css  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  launch.rs  lib.rs  lifecycle.rs  main.rs  pairing.rs  snapshot.rs  state.rs  state_tests.rs  supervisor.rs  tray.rs
hub/: .env.example  README.md  package.json
hub/scripts/: cleanup-sessions.ts  generate-embedded-web-assets.ts
hub/src/: configuration.ts  devHot.ts  hubHelpers.ts  index.ts  runtimeStatus.ts
pairing/: .env.example  README.md  package.json  tsconfig.json
scripts/: devRemote.ts  devRemoteHelpers.test.ts  devRemoteHelpers.ts  devRemoteSupervisor.test.ts  devRemoteSupervisor.ts  generate-brand-assets.mjs
shared/: README.md  package.json
web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+1536 files in other folders)
