[package]
name = "viby-desktop"
version = "0.2.0"
description = "Native desktop shell for Viby hub"
authors = ["OpenAI Codex"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "viby_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
arboard = "3.6.1"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
notify = "8.2.0"
open = "5.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37.2"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
toml = "0.9.7"
